# irb_session_packager

./: .gitignore  LICENSE  README.md  demo_enhanced_features.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml
app/: audit_manager.py  bids_generator.py  config.py  consent_manager.py  irb_generator.py  main.py  models.py  packager.py  routes.py  sop_generator.py
app/common_utils/: __init__.py  config.py  database.py  error_handling.py  logging_config.py
app/templates/: index.html
app/templates/bids/: CHANGES.md  README.md  dataset_description.json  participants.json  rest_events.json  task_events.json
app/templates/irb/: adverse_events.md  data_management.md  informed_consent.md  protocol_summary.md  recruitment.md  risk_assessment.md
app/templates/sop/: data_collection_sop.md  eeg_resting_state_sop.md  fmri_task_sop.md  general_setup_sop.md  quality_control_sop.md  tms_safety_sop.md
data/: sample_data.csv
output/: debug_export_001_package.json  test_export_001_package.json
tests/: test_enhanced_features.py  test_main.py  test_models.py
